feat: add MCP server for OpenCost allocation and asset queries (#3386)
Signed-off-by: sneax <paladesh600@gmail.com>
Co-authored-by: Alex Meijer <ameijer@users.noreply.github.com>

--- a/tilt-values.yaml
+++ b/tilt-values.yaml
@@ -5,6 +5,8 @@ service:
   enabled: true
   # --  Kubernetes Service type
   type: ClusterIP
+  # -- Additional ports for the service
+  extraPorts: []
 
 opencost:
   exporter:
@@ -12,6 +14,11 @@ opencost:
     cloudProviderApiKey: ""
     # -- Default cluster ID to use if cluster_id is not set in Prometheus metrics.
     defaultClusterId: "tilt-cluster"
+    # -- Extra container ports for MCP server
+    extraPorts:
+      - name: mcp-server
+        containerPort: 8081
+        protocol: TCP
   livenessProbe:
     # -- Whether probe is enabled
     enabled: true
