--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -45,7 +45,7 @@ jobs:
           # Get the SHA from the workflow run
           SHA="${{ github.event.workflow_run.head_sha }}"
           # Find the tag pointing to this SHA
-          TAG=$(git tag --points-at $SHA | grep '^v[0-9]' | head -1)
+          TAG=$(git tag --points-at $SHA | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | head -1)
           if [ -z "$TAG" ]; then
             echo "Error: No version tag found for SHA $SHA"
             exit 1
